# wow-cli-sync

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: list.rs
