[package]
name = "wow-updater-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
error = "0.1.9"
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
zip = "8.1.0"
